--- a/VWG.Community.Forms/UploadBoxSkin.UploadBox.html
+++ b/VWG.Community.Forms/UploadBoxSkin.UploadBox.html
@@ -15,12 +15,17 @@
 
 	</script>
 
+    <script type="text/javascript" src="Resources.Includes.js.wgx"></script>
+    <script type="text/javascript" src="Resources.Browser.Form.js.wgx"></script>
+    <script type="text/javascript" src="Resources.Gizmox.WebGUI.Forms.Skins.CommonSkin.Interfaces.js.wgx"></script>
+
 	<script type="text/javascript" src="Assemblies.Resources.Scripts.jQuery.min.js.wgx?assembly=Gizmox.WebGUI.Forms"></script>
 	<script type="text/javascript" src="Assemblies.Resources.Scripts.jQuery-UI.min.js.wgx?assembly=Gizmox.WebGUI.Forms"></script>
-    <!--! 用 online js 檔案，un-comment -->
+
+    <!-- 用 online js 檔案，un-comment -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.31.0/js/jquery.fileupload.min.js" integrity="sha512-qPkNWpUqYz8bhO5bGNPBvlCB9hPZBil2ez5Mo8yVmpCKI315UDDPQeg/TE7KwZ+U/wdSO8JguwVxYY/Ha7U+vQ==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/10.31.0/js/jquery.iframe-transport.min.js" integrity="sha512-nPWpXBDIYz79dENtnSj+4vttX5zcmZ4RE2pLj24hdMjFqNxEh5TNwjnyhpdJJxq9cxMy7NLgG06w5s6wytsOiw==" crossorigin="anonymous"></script>
-    <!--! 用 embedded js 檔案，un-comment -->
+    <!-- 用 embedded js 檔案，un-comment -->
     <!--
 	<script type="text/javascript" src="[Skin.Path]jquery.iframe-transport.js.wgx"></script>
 	<script type="text/javascript" src="[Skin.Path]jquery.fileupload.js.wgx"></script>
